XWIKI-21037: Not all items of Drawer are visible and drawer itself don't allow scrolling * Fixed style

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/drawer.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/drawer.less
@@ -36,6 +36,7 @@
   transition: margin-right .6s cubic-bezier(0.190, 1.000, 0.220, 1.000);
   padding: 0;
   border: 0;
+  overflow-y: auto;
   // We overwrite max-height over browser defaults for dialog
   max-height: 100vh;
   
